# mimapr

./: .gitignore  .gitmodules  CMakeLists.txt  devenv.nix  make_plot.py
include/: EnumBitmask.h  ProgressBar.h  Solver.h  config.h  drawer.h  ffmpeg.h  gif.h  mesh.h  object.h
lib/lodepng/: CMakeLists.txt
lib/lodepng/include/: lodepng.h
lib/lodepng/src/: lodepng.cpp
src/: ProgressBar.cpp  Solver.cpp  config.cpp  drawer.cpp  main.cpp  mesh.cpp
src/ffmpeg/: linux.cpp  mod.cpp
